--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,21 @@ body {
   margin-left: auto;
 }
 
+.section {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+h1,
+h1,
+h3,
+h4,
+h5,
+h6,
+p {
+margin: 0;
+}
+
 .flexbox {
   display: flex;
 }
@@ -89,6 +104,7 @@ body {
 }
 
 .btn {
+  display: inline-block;
   border: 2px solid var(--red);
   border-radius: 46px;
   padding-top: 16px;
@@ -105,6 +121,8 @@ body {
 }
 
 .logo {
+  display: inline-flex;
+  align-items: center;
   font-family: "Red Hat Display";
   font-weight: bold;
   font-size: 19px;
@@ -116,10 +134,28 @@ body {
 }
 
 .menu-link {
+  position: relative;
   color: var(--green);
 }
 
-.menu-link:hover {
+.menu-link::after {
+  content: " ";
+  position: absolute;
+  bottom: -20px;
+  left: 50%;
+  transform: translateY(-50%);
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: transparent;
+}
+
+.menu-link:hover::after {
+  background-color: var(--red);
+}
+
+.menu-link:hover,
+.menu-link:focus {
   color: var(--red);
 }
 
@@ -130,7 +166,24 @@ body {
 }
 
 .section-title {
-  font-size: 64px;
+  font-size: 50px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.section-description {
+  width: 50%;
+  margin: 0 auto 110px;
+  text-align: center;
+}
+
+.title-label {
+  display: block;
+  font-size: 29px;
+  font-weight: bold;
+  color: var(--red);
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 .item-title {
@@ -144,16 +197,30 @@ body {
   line-height: 1.9;
 }
 
+.hero-content .btn {
+  margin-top: 45px;
+}
+
+.hero {
+  padding-top: 300px;
+  padding-bottom: 200px;
+  background-image: url(../images/stay-at-home.png);
+  background-repeat: no-repeat;
+  background-position: right center;
+  background-size: contain;
+}
+
+
 .coronavirus {
   font-size: 20px;
   line-height: 2.15;
 }
 
-.logo {
-  display: inline-flex;
-  align-items: center;
-  margin-right: auto;
+.coronavirus .section-title,
+.coronavirus .title-label {
+text-align: left;
 }
+ 
 
 .logo span {
   margin-left: 13px;
@@ -161,6 +228,11 @@ body {
 
 .social-list {
   display: inline-flex;
+}
+
+.social-link {
+  display: flex;
+  align-items: center;
 }
 
 .social-item:not(:last-child) {
@@ -188,6 +260,9 @@ body {
   padding-top: 36px;
   padding-bottom: 20px;
 }
+.page-header .logo {
+  margin-right: auto;
+}
 
 .page-header .flexbox {
   justify-content: flex-end;
@@ -213,18 +288,71 @@ body {
   text-align: center;
   box-shadow: 0 4px 40px 0 rgba(0, 0, 0, 0.25);
   border-radius: 10px;
+  border-bottom: 6px solid transparent;
 }
 
 .contagion-item:not(:nth-child(3n)) {
   margin-right: 30px;
 }
+ .contagion-item:hover {
+   border-bottom: 6px solid var(--red);
 
+ }
+
+.contagion-item::before {
+  content: " ";
+  display: block;
+  width: 100%;
+  height: 270px;
+  margin-bottom: 54px;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.item-air::before {
+  background-image: url(../images/air-transmission.png);
+}
+
+.item-human::before {
+  background-image: url(../images/human-contacts.png);
+}
+.item-objects::before {
+background-image: url(../images/containted-objects.png);
+}
+
+.symptoms-image {
+  display: block;
+  margin: 0 auto;
+}
 .what-we-do-list {
   counter-reset: item;
 }
 
 .what-we-do-item {
   counter-increment: item;
+  padding-top: 150px;
+  padding-bottom: 130px;
+  background-image: url(../images/what-we-do-1.jpg);
+  background-repeat: no-repeat;
+  background-position: right center;
+  background-size: contain;
+}
+
+.mask-item {
+  background-image: url(../images/what-we-do-1.jpg);
+}
+.wash-item {
+  background-image: url(../images/what-we-do-2.jpg);
+}
+.nose-item {
+  background-image: url(../images/what-we-do-3.jpg);
+}
+.containts-item {
+  background-image: url(../images/what-we-do-4.jpg);
+}
+
+.what-we-do-item:nth-child(2n){
+  background-position: left center;
 }
 
 .what-we-do-item .content-box {
@@ -254,3 +382,36 @@ body {
 .what-we-do-item:nth-child(2n) .content-box {
   margin-left: auto;
 }
+
+.coronavirus {
+  background-image: url(../images/coronavirus.png);
+  background-repeat: no-repeat;
+  background-position: left center;
+  background-size: contain;
+}
+
+.coronavirus .content-box {
+    margin-left: auto;
+    padding-top: 150px;
+    padding-bottom: 130px; 
+
+}
+ .coronavirus .btn {
+   margin-top: 45px;
+ }
+
+
+
+.footer .flexbox {
+justify-content: space-between;
+align-items: center;
+}
+
+.copyright {
+  padding: 25px 0px;
+  text-align: center;
+}
+
+
+
+
